// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ventoDevice should be able to get status from modbus on init 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
    },
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Vento driver has been initialized",
      ],
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Vento device has been initialized: [127.0.0.2]",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "log",
        "Sending READ to device TEST1234 at 127.0.0.2:",
        [
          "11",
          "ON_OFF",
          "SPEED",
          "MANUAL_SPEED",
          "BOOT_MODE",
          "BOOST_MODE_DEACTIVATION_DELAY",
          "VENTILATION_MODE",
          "FILTER_ALARM",
          "FILTER_TIMER",
          "CURRENT_HUMIDITY",
          "HUMIDITY_SENSOR_ACTIVATION",
          "HUMIDITY_THRESHOLD",
          "UNIT_TYPE",
          "FAN1RPM",
          "TIMER_MODE",
          "READ_ALARM",
        ],
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Device state received: ",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "ON_OFF": {
    "0": 1
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": 1,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": 0,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "MANUAL_SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": 0,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "MANUAL_SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": 0,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "VENTILATION_MODE": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": 0,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "TIMER_MODE": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": 0,
          },
          "unittype": "Vento Expert",
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_boost": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "alarm_connectivity": [
        [
          false,
          "calling unregistered capability",
        ],
      ],
      "alarm_filter": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_generic": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "fan_speed": [
        [
          NaN,
          {
            "result": undefined,
          },
        ],
      ],
      "filter_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
      "manualSpeed": [
        [
          NaN,
          {
            "result": undefined,
          },
        ],
      ],
      "measure_RPM": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "measure_humidity": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "onoff": [
        [
          false,
          {
            "result": undefined,
          },
        ],
      ],
      "operationMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "speedMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "boost_delay": undefined,
      "devicemodel": "Vento Expert",
      "devicepwd": "password",
      "humidity_sensor": false,
      "humidity_threshold": undefined,
    },
  },
}
`;

exports[`ventoDevice should be able to get status when device is marked as off 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
    },
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Vento driver has been initialized",
      ],
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Vento device has been initialized: [127.0.0.2]",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "log",
        "Sending READ to device TEST1234 at 127.0.0.2:",
        [
          "11",
          "ON_OFF",
          "SPEED",
          "MANUAL_SPEED",
          "BOOT_MODE",
          "BOOST_MODE_DEACTIVATION_DELAY",
          "VENTILATION_MODE",
          "FILTER_ALARM",
          "FILTER_TIMER",
          "CURRENT_HUMIDITY",
          "HUMIDITY_SENSOR_ACTIVATION",
          "HUMIDITY_THRESHOLD",
          "UNIT_TYPE",
          "FAN1RPM",
          "TIMER_MODE",
          "READ_ALARM",
        ],
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Device state received: ",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "ON_OFF": {
    "0": 1
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": 1,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": 0,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "MANUAL_SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": 0,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "MANUAL_SPEED": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": 0,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "VENTILATION_MODE": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": 0,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": undefined,
          },
          "unittype": "Vento Expert",
        },
      ],
      [
        "log",
        "Sending WRITEREAD to device TEST1234 at 127.0.0.2:",
        "{
  "TIMER_MODE": {
    "0": 0
  }
}",
      ],
      [
        "log",
        "Response from device TEST1234 at 127.0.0.2:",
        {
          "alarm": undefined,
          "boost": {
            "deactivationtimer": undefined,
            "mode": undefined,
          },
          "fan": {
            "rpm": undefined,
          },
          "filter": {
            "alarm": undefined,
            "timer": {
              "days": undefined,
              "hour": undefined,
              "min": undefined,
            },
          },
          "humidity": {
            "activated": 0,
            "current": undefined,
            "sensoractivation": undefined,
            "threshold": undefined,
          },
          "onoff": undefined,
          "operationmode": undefined,
          "speed": {
            "manualspeed": undefined,
            "mode": undefined,
          },
          "timers": {
            "countdown": {
              "hour": undefined,
              "min": undefined,
              "sec": undefined,
            },
            "mode": 0,
          },
          "unittype": "Vento Expert",
        },
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_boost": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "alarm_connectivity": [
        [
          false,
          "calling unregistered capability",
        ],
      ],
      "alarm_filter": [
        [
          false,
          {
            "result": false,
          },
        ],
      ],
      "alarm_generic": [
        [
          true,
          {
            "result": true,
          },
        ],
      ],
      "fan_speed": [
        [
          NaN,
          {
            "result": undefined,
          },
        ],
      ],
      "filter_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
      "manualSpeed": [
        [
          NaN,
          {
            "result": undefined,
          },
        ],
      ],
      "measure_RPM": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "measure_humidity": [
        [
          undefined,
          "calling unregistered capability",
        ],
      ],
      "onoff": [
        [
          false,
          {
            "result": undefined,
          },
        ],
      ],
      "operationMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "speedMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode": [
        [
          undefined,
          {
            "result": undefined,
          },
        ],
      ],
      "timerMode_timer": [
        [
          "undefined:undefined:undefined",
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "boost_delay": undefined,
      "devicemodel": "Vento Expert",
      "devicepwd": "password",
      "humidity_sensor": false,
      "humidity_threshold": undefined,
    },
  },
}
`;

exports[`ventoDevice should be able to handle errors 1`] = `
{
  "apiCalls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_connectivity": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 2,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Vento driver has been initialized",
      ],
      [
        "log",
        "Locating device with id TEST1234",
      ],
      [
        "setAvailable",
        undefined,
      ],
      [
        "log",
        "Vento device has been initialized: [127.0.0.2]",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
      [
        "log",
        "Requesting the current device state",
      ],
      [
        "setUnavailable was called",
        "test errors",
      ],
      [
        "error",
        "Failed to get device state, device unreachable",
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {
      "alarm_connectivity": [
        [
          true,
          "calling unregistered capability",
        ],
      ],
    },
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should be able to setup all capabilities 1`] = `
{
  "calls": {
    "capabilities": {
      "alarm_boost": [Function],
      "alarm_filter": [Function],
      "alarm_generic": [Function],
      "fan_speed": [Function],
      "manualSpeed": [Function],
      "manualSpeed_set": [Function],
      "onoff": [Function],
      "operationMode": [Function],
      "operation_mode": [Function],
      "speedMode": [Function],
      "speed_mode": [Function],
      "timerMode": [Function],
      "timer_mode": [Function],
    },
    "getCapabilityValue": {},
    "hasCapability": {
      "alarm_boost": 1,
      "alarm_filter": 1,
      "alarm_generic": 1,
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "log": [
      [
        "log",
        "Vento driver has been initialized",
      ],
      [
        "log",
        "Create the flow for the speed mode capability",
      ],
      [
        "log",
        "Create the flow for the manual speed capability",
      ],
      [
        "log",
        "Create the flow for the operation mode capability",
      ],
      [
        "log",
        "Create the flow for the timer mode capability",
      ],
    ],
    "registerCapabilityListener": {
      "fan_speed": 1,
      "manualSpeed": 1,
      "onoff": 1,
      "operationMode": 1,
      "speedMode": 1,
      "timerMode": 1,
    },
    "registerRunListener": {
      "alarm_boost": [
        [
          [Function],
        ],
      ],
      "alarm_filter": [
        [
          [Function],
        ],
      ],
      "alarm_generic": [
        [
          [Function],
        ],
      ],
      "manualSpeed_set": [
        [
          [Function],
        ],
      ],
      "operation_mode": [
        [
          [Function],
        ],
      ],
      "speed_mode": [
        [
          [Function],
        ],
      ],
      "timer_mode": [
        [
          [Function],
        ],
      ],
    },
    "setCapabilityValue": {},
    "settings": {
      "devicepwd": "password",
    },
  },
}
`;

exports[`ventoDevice should get and set values trough the api and modbus 1`] = `
{
  "modbusCalls": [
    [
      E {
        "_dataEntries": [
          {
            "parameter": 1,
            "value": undefined,
          },
          {
            "parameter": 2,
            "value": undefined,
          },
          {
            "parameter": 68,
            "value": undefined,
          },
          {
            "parameter": 6,
            "value": undefined,
          },
          {
            "parameter": 102,
            "value": undefined,
          },
          {
            "parameter": 183,
            "value": undefined,
          },
          {
            "parameter": 136,
            "value": undefined,
          },
          {
            "parameter": 100,
            "value": undefined,
          },
          {
            "parameter": 37,
            "value": undefined,
          },
          {
            "parameter": 15,
            "value": undefined,
          },
          {
            "parameter": 25,
            "value": undefined,
          },
          {
            "parameter": 185,
            "value": undefined,
          },
          {
            "parameter": 74,
            "value": undefined,
          },
          {
            "parameter": 7,
            "value": undefined,
          },
          {
            "parameter": 131,
            "value": undefined,
          },
          {
            "parameter": 11,
            "value": undefined,
          },
        ],
        "_deviceId": "TEST1234",
        "_functionType": 1,
        "_password": "password",
      },
      "127.0.0.2",
    ],
  ],
}
`;
